syntax error fixed

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -9,7 +9,7 @@
   <h2>Select a table to manage</h2>
   <form method="GET" action="/menu">
     <select name="table">
-      <option value"units">Units</option>
+      <option value="units">Units</option>
       <option value="unit_groups">Unit Groups</option>
       <option value="activity_types">Activity Types</option>
       <option value="activity_logs">Activity Logs</option>
