Added view units functionality

--- a/app/templates/units/view.html
+++ b/app/templates/units/view.html
@@ -1,9 +1,26 @@
-<h2>View Unit</h2>
+<h2>View All Units</h2>
 
-<form method="POST">
-  <label>Unit ID:</label>
-  <input type="number" name="unit_id" required>
-  <button type="submit">View</button>
-</form>
+<table border="1" cellpadding="6" cellspacing="0">
+  <thread>
+    <tr>
+      <th>ID</th>
+      <th>Name</th>
+      <th>Group ID</th>
+      <th>Factor</th>
+      <th>Shift</th>
+    </tr>
+  </thread>
+  <body>
+    {% for u in units %}
+      <tr>
+        <td>{{ u.id }}</td>
+        <td>{{ u.name }}</td>
+        <td>{{ u.group_id }}</td>
+        <td>{{ u.factor }}</td>
+        <td>{{ u.shift }}</td>
+      </tr>
+    {% endfor %}
+  </tbody>
+</table>
 
-<a href="/menu>table=units">Back to Units Menu</a>
+<a href="/menu?table=units">Back to Units Menu</a>
