--- a/app/templates/units/update.html
+++ b/app/templates/units/update.html
@@ -17,6 +17,6 @@
 
 <div id="unit-dropdown"></div>
 
-<div id="unit-form"></div>
+<div id="unit-update-form"></div>
 
 <a href="/menu?table=units">Back to Units Menu</a>
