--- a/app/templates/units/partials/unit_update_form.html
+++ b/app/templates/units/partials/unit_update_form.html
@@ -21,6 +21,7 @@
 
   <label>Shift:</label>
   <input type="number" step="0.0001" name="shift" value="{{ unit.shift }}" required>
+  <input type="hidden" name="is_canonical" value="{{ unit.is_canonical }}">
   <button type="submit">Update</button>
 
 </form>
