--- a/app/templates/units/update_result.html
+++ b/app/templates/units/update_result.html
@@ -1,5 +1,9 @@
 <h2>Unit Updated Successfully</h2>
 
-<p>The Unit <strong>{{ name }}</strong> has been updated.</p>
-
-<a href="/menu?table=units">Back to Units Menu</a>
+{% if error %}
+  <p style:"color: red;">{{ error }}</p>
+  <a href="/units/update_unit">Return</a>
+{% else %}
+  <p>The Unit <strong>{{ name }}</strong> has been updated.</p>
+  <a href="/menu?table=units">Back to Units Menu</a>
+{% endif %}
