Missing table header column filled

--- a/app/templates/units/create_result.html
+++ b/app/templates/units/create_result.html
@@ -2,23 +2,23 @@
 
 <table border="1" cellpadding="6" cellspacing="0">
   <tr>
-    <th></th>
+    <th>Unit ID</th>
     <td>{{ unit_id }}</td>
   </tr>
   <tr>
-    <th></th>
+    <th>Unit Name</th>
     <td>{{ name }}</td>
   </tr>
   <tr>
-    <th></th>
+    <th>Group ID</th>
     <td>{{ group_id }}</td>
   </tr>
   <tr>
-    <th></th>
+    <th>Factor</th>
     <td>{{ factor }}</td>
   </tr>
   <tr>
-    <th></th>
+    <th>Shift</th>
     <td>{{ shift }}</td>
   </tr>
 </table>
