Create, view and update for activity_types table implemented

--- a/app/templates/activity_types/create.html
+++ b/app/templates/activity_types/create.html
@@ -16,6 +16,4 @@
   <button type="submit">Create</button>
 </form>
 
-<a href="/menu?table=activities">Back to Activity Types Menu</a>
-
-    type.goal_quantity
+<a href="/menu?table=activity_types">Back to Activity Types Menu</a>
