--- a/app/templates/activity_types/create_result.html
+++ b/app/templates/activity_types/create_result.html
@@ -10,8 +10,8 @@
     <td>{{ name }}</td>
   </tr>
   <tr>
-    <th>Unit Group ID</th>
-    <td>{{ group_id }}</td>
+    <th>Unit Group Name</th>
+    <td>{{ group_name }}</td>
   </tr>
   <tr>
     <th>Activity Goal</th>
