--- a/app/templates/menu/activity_types_menu.html
+++ b/app/templates/menu/activity_types_menu.html
@@ -1,6 +1,6 @@
 <h2>Activity Types Menu</h2>
 
-<form method="GET" action="/activities/action">
+<form method="GET" action="/activity_types/action">
   <label>Select an action:</label>
   <select name="action">
     <option value="create">Create New Activity Type</option>
