--- a/app/templates/menu/activity_logs_menu.html
+++ b/app/templates/menu/activity_logs_menu.html
@@ -3,10 +3,10 @@
 <form method="GET" action="/activity_logs/action">
   <label>Select an action:</label>
   <select name="action">
-    <option value="create">Create New Activity Type</option>
-    <option value="view">View Activity Types</option>
-    <option value="update">Update Activity Type</option>
-    <option value="delete">Delete Activity Type</option>
+    <option value="create">Create New Activity Log</option>
+    <option value="view">View Activity Logs</option>
+    <option value="update">Update Activity Log</option>
+    <option value="delete">Delete Activity Log</option>
   </select>
   <button type="submit">Submit</button>
 </form>
